--- a/css/style.css
+++ b/css/style.css
@@ -27,8 +27,9 @@ body {
 }
 #all-products {
   display: grid;
+  padding: 20px;
+  padding-top: 100px;
   grid-template-columns: repeat(3, 1fr);
-  /* border: 1px solid black; */
   text-align: center;
   width: 100%;
   margin: auto;
@@ -36,11 +37,17 @@ body {
   justify-content: center;
 }
 .single-product {
-  padding: 10px;
+
+  padding: 25px;
+  margin-top: 40px;
+  margin-left: 20px;
+  width: 400px;
+  height: 500px;
   transition: 0.6s;
 }
 .single-product:hover {
   box-shadow: 4px 4px 7px gray;
+  background-color: beige;
   border-radius: 10px;
   border: 1px solid cyan;
 }
